k8s/monitoring/gmp-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: gmp-frontend   # <-- Workload Identity-enabled SA
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - arm64
                      - amd64
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      automountServiceAccountToken: true
      containers:
        - args:
            - "--web.listen-address=:9090"
            - "--query.project-id=access-api-497314"
          image: gke.gcr.io/prometheus-engine/frontend:v0.15.3-gke.0
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: web
          name: frontend
          ports:
            - containerPort: 9090
              name: web
          readinessProbe:
            httpGet:
              path: /-/ready
              port: web
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: monitoring
spec:
  ports:
    - name: web
      port: 9090
      targetPort: 9090
  selector:
    app: frontend
